improve styling for accordions - fix border for focused state - do not align pubchem-logo directly next to chevron

--- a/app/assets/stylesheets/global-styles/bootstrap-config.scss
+++ b/app/assets/stylesheets/global-styles/bootstrap-config.scss
@@ -46,7 +46,8 @@ $card-bg: $chemstrap-white;
 $accordion-bg: $chemstrap-white;
 $accordion-button-bg: map-get($silicon-shades, lighten5);
 $accordion-button-active-bg: $chemstrap-white;
-$accordion-button-focus-box-shadow: none;
+$accordion-button-focus-box-shadow: inset 0
+  calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color); //same value as unfocused
 $accordion-body-padding-y: 0.5rem;
 $accordion-body-padding-x: 0.5rem;
 $accordion-icon-transition: transform 0.2s, padding-top 0.2s;
